--- a/wp-content/themes/twentythirteen/style.bak.css
+++ b/wp-content/themes/twentythirteen/style.bak.css
@@ -776,8 +776,10 @@ img.wp-smiley,
 
 .site {
 	background-color: #fff;
+	border-left: 1px solid #f2f2f2;
+	border-right: 1px solid #f2f2f2;
 	margin: 0 auto;
-	max-width: 960px;
+	max-width: 1600px;
 	width: 100%;
 }
 
@@ -851,8 +853,7 @@ img.wp-smiley,
 	clear: both;
 	margin: 0 auto;
 	max-width: 1080px;
-	min-height: 40px;
-	padding:30px 0;
+	min-height: 45px;
 	position: relative;
 }
 
@@ -988,7 +989,7 @@ ul.nav-menu .focus > ul,
  */
 
 .hentry {
-
+	padding: 40px 0;
 }
 
 .entry-header,
@@ -996,7 +997,7 @@ ul.nav-menu .focus > ul,
 .entry-summary,
 .entry-meta {
 	margin: 0 auto;
-	/*max-width: 604px;*/
+	max-width: 604px;
 	width: 100%;
 }
 
